# CT-FM

./: .gitignore  404.html  LICENSE  Makefile  README.md  data_preparation_v1.ipynb  database_dental.csv  dataframe_constrcution.ipynb  environment.yml  feature_extractor.ipynb  feature_extractor.py  index.html  mkdocs.yml  plastimatch_convert.sh  pyproject.toml  read_pkl.ipynb  requirements.txt  run_expes.sh  scan_list.pkl  utils.py
callbacks/: __init__.py  ssl_logger.py  wandb_image_logger.py
data/: __init__.py  get_datalist.py  safe_dataset.py  ts.py  ts_data.py
datasets/: idc_ssl.py  nlst_ssl.py  safe_dataset_wrapper.py
docs/: index.md
evaluation/: cq500.yaml  lits.yaml  medmnist.yaml  msd.yaml  radchest.yaml  radchest_param_search.yaml  sinoct.yaml  totalseg.yaml  totalseg_ablation.yaml  totalseg_subset.yaml  word.yaml
experiments/: IDC_swav_pretrain.yaml  NLST_simclr_pretrain.yaml  NLST_swav_pretrain copy.yaml  STL10_simclr_pretrain.yaml  STL10_swav_pretrain.yaml  transforms_IDC_swav.yaml
loss/: __init__.py  conrecon_loss.py  intrasample_ntxent_loss.py  intrasample_wrapper.py  ntxent_loss.py  simsiam_loss.py  swav.py  swav_loss.py  vicreg_loss.py  vicregl.py
meta-eval-app/: app.py  data.py  inference.py  model.py  utils.py
meta-evaluation/: feature_cluster_seg.ipynb  utils.py
metrics/: __init__.py  monai.py
models/: conrecon.py  efficientnet.py  resnet.py  segresnet.py  segresnetds.py  segresnetds_w_embedding.py  simclr.py  suprem.py  swav.py  vicregl.py  wrapper.py
notebooks/: 3d_mir_retrieval.ipynb  anatomical_clustering.ipynb  feature_extractor.py  generate_saliency_maps.py  idc_data_exploration.ipynb  meta_concept_analysis.ipynb  utils.py  (+3 more)
(+270 files in other folders)
