[project]
name = "lighter-ct-fm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "monai[itk,nibabel]>=1.4.0",
    "project-lighter",
]

[tool.uv.sources]
project-lighter = { git = "https://github.com/project-lighter/lighter.git", rev = "dataloader" }
